Bug 1317725 -Correct creation of Sliced Remote Blob actorss when used in FormData in workers, r=smaug

--HG--
rename : dom/workers/test/script_bug1301094.js => dom/workers/test/script_createFile.js